add archives in user

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -9,7 +9,9 @@
 
 
 body {
-  background-color: #F5FEF2;
+  /*background-color: #F5FEF2;*/
+  background-color: #e6e6e6;
+  	
   padding-bottom: 0px;
 }
 
